fixes on mobile layout

--- a/assets/css/animando.css
+++ b/assets/css/animando.css
@@ -3,7 +3,7 @@
 .animated-element {
     opacity: 0; 
     transform: translateX(-90%);
-    transition: opacity 0.5s, transform 1s;
+    transition: opacity 0.5s, transform 2s;
   }
   
 
